feat[BE]: add GET /api/user_assignments/:id endpoint
and update api docs/types
