# backend/config/routes.rb
@@ -8,7 +8,7 @@ Rails.application.routes.draw do
 
   namespace :api do
     resources :users, only: [ :index ]
-    resources :user_assignments, only: [ :index ] do
+    resources :user_assignments, only: [ :index, :show ] do
       resources :questions, only: [ :index ], controller: 'user_assignment_questions'
     end
   end
